force-app/main/default/objects/Associated_Programs_Vendors__c/Associated_Programs_Vendors__c.object-meta.xml
<CustomObject>
    <description>Viper Project</description>
    <label>Associated Programs/Vendors</label>
    <nameField>
        <displayFormat>APV-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Programs/Vendors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>