force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Accounting_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Treatment__c</fullName>
    <label>Accounting Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>COGS Offset</fullName>
            </value>
            <value>
                <fullName>Eligible for OPEX Offset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>