force-app/main/default/objects/Associated_Programs_Vendors__c/fields/AlaCarte_All_Segments__c.field-meta.xml
<CustomField>
    <fullName>AlaCarte_All_Segments__c</fullName>
    <formula>IF(( ISBLANK( CSMR__c ) &amp;&amp; ISBLANK( LE__c ) &amp;&amp; ISBLANK( PUB__c ) &amp;&amp; ISBLANK( SMB__c ) ) &amp;&amp; (Business_Segment__c =&apos;All Segments&apos; ) , Budgeted_Price__c , 0)</formula>
    <label>All Segments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>