force-app/main/default/objects/Associated_Programs_Vendors__c/fields/AlaCarte_Int_l__c.field-meta.xml
<CustomField>
    <fullName>AlaCarte_Int_l__c</fullName>
    <formula>IF(( ISBLANK( CSMR__c ) &amp;&amp; ISBLANK( LE__c ) &amp;&amp; ISBLANK( PUB__c ) &amp;&amp; ISBLANK( SMB__c ) ) &amp;&amp; ISPICKVAL (MDF_Program__r.Business_Segment__c,&apos;Int\&apos;l&apos; ) , Budgeted_Price__c , 0)</formula>
    <label>Int&apos;l</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>