force-app/main/default/objects/Associated_Programs_Vendors__c/fields/AlaCarte_Total__c.field-meta.xml
<CustomField>
    <fullName>AlaCarte_Total__c</fullName>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>