force-app/main/default/objects/Associated_Programs_Vendors__c/fields/APV_Status__c.field-meta.xml
<CustomField>
    <fullName>APV_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>