force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Budgeted_Price__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Price__c</fullName>
    <label>Budgeted Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>