force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <formula>TEXT (MDF_Program__r.Business_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Segment</label>
    <type>Text</type>
</CustomField>