force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Co_Marketing_Manager_Email2__c.field-meta.xml
<CustomField>
    <fullName>Co_Marketing_Manager_Email2__c</fullName>
    <description>Co Marketing Manager Email 2</description>
    <label>Co-Marketing Manager Email #2</label>
    <type>Email</type>
</CustomField>