force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Co_Marketing_Manager_Email3__c.field-meta.xml
<CustomField>
    <fullName>Co_Marketing_Manager_Email3__c</fullName>
    <description>Co_Marketing_Manager_Email 3</description>
    <label>Co-Marketing Manager Email #3</label>
    <type>Email</type>
</CustomField>