force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Co_Marketing_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Co_Marketing_Manager_Email__c</fullName>
    <label>Co-Marketing Manager Email #1</label>
    <type>Email</type>
</CustomField>