force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Co_Marketing_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Marketing_Manager_Name__c</fullName>
    <label>Co-Marketing Manager Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>