force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Contract_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Declined by Vendor</fullName>
            </value>
            <value>
                <fullName>Declined by Product Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>