force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Contracting_Region__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Region__c</fullName>
    <label>Contracting Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>AMER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>