force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Converted_Budget_Price__c.field-meta.xml
<CustomField>
    <fullName>Converted_Budget_Price__c</fullName>
    <label>Converted Budget Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>