force-app/main/default/objects/Associated_Programs_Vendors__c/fields/CSMR__c.field-meta.xml
<CustomField>
    <fullName>CSMR__c</fullName>
    <label>CSMR</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>