force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>