force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Employees_Name__c.field-meta.xml
<CustomField>
    <fullName>Employees_Name__c</fullName>
    <label>Employee&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>