force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Fiscal_Quarter_New__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Quarter_New__c</fullName>
    <label>Fiscal Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>