force-app/main/default/objects/Associated_Programs_Vendors__c/fields/FQ_Sort__c.field-meta.xml
<CustomField>
    <fullName>FQ_Sort__c</fullName>
    <formula>VALUE(MID( Fiscal_Quarter__c ,3,2)&amp;RIGHT(Fiscal_Quarter__c,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>