force-app/main/default/objects/Associated_Programs_Vendors__c/fields/HCID__c.field-meta.xml
<CustomField>
    <fullName>HCID__c</fullName>
    <label>HCID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>