force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Headcount__c.field-meta.xml
<CustomField>
    <fullName>Headcount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Headcount</label>
    <referenceTo>Headcount__c</referenceTo>
    <relationshipLabel>Associated Programs/Vendors</relationshipLabel>
    <relationshipName>Associated_Programs_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>