force-app/main/default/objects/Associated_Programs_Vendors__c/fields/LE__c.field-meta.xml
<CustomField>
    <fullName>LE__c</fullName>
    <label>LE</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>