force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <label>Manager Name Old</label>
    <length>80</length>
    <type>Text</type>
</CustomField>