force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Managers_Name__c.field-meta.xml
<CustomField>
    <fullName>Managers_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager&apos;s Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Associated_Programs_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>