force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Marketing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Plan</label>
    <referenceTo>Marketing_Plan__c</referenceTo>
    <relationshipLabel>Associated Programs</relationshipLabel>
    <relationshipName>Associated_Programs_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>