force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Marketing_plan_currency__c.field-meta.xml
<CustomField>
    <fullName>Marketing_plan_currency__c</fullName>
    <formula>TEXT( Marketing_Plan__r.Currency_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing plan currency</label>
    <type>Text</type>
</CustomField>