force-app/main/default/objects/Associated_Programs_Vendors__c/fields/MDF_Program__c.field-meta.xml
<CustomField>
    <fullName>MDF_Program__c</fullName>
    <label>MDF Program</label>
    <referenceTo>MDF_Program__c</referenceTo>
    <relationshipLabel>Associated Vendors</relationshipLabel>
    <relationshipName>Associated_Programs_Vendors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>