force-app/main/default/objects/Associated_Programs_Vendors__c/fields/MP_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>MP_Contract_Date__c</fullName>
    <formula>IF(TEXT(Status__c)==&apos;Signed&apos;,TEXT( Marketing_Plan__r.Contract_Date__c ),&apos;BLANK&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Date</label>
    <type>Text</type>
</CustomField>