force-app/main/default/objects/Associated_Programs_Vendors__c/fields/MP_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>MP_Contract_Type__c</fullName>
    <formula>TEXT( Marketing_Plan__r.Contract_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP Contract Type</label>
    <type>Text</type>
</CustomField>