force-app/main/default/objects/Associated_Programs_Vendors__c/fields/MP_conversion_rate__c.field-meta.xml
<CustomField>
    <fullName>MP_conversion_rate__c</fullName>
    <formula>Marketing_Plan__r.Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP conversion rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>