force-app/main/default/objects/Associated_Programs_Vendors__c/fields/MP_Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>MP_Fiscal_Quarter__c</fullName>
    <formula>TEXT( Marketing_Plan__r.Fiscal_Quarter__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP Fiscal Quarter</label>
    <type>Text</type>
</CustomField>