force-app/main/default/objects/Associated_Programs_Vendors__c/fields/MP_Region__c.field-meta.xml
<CustomField>
    <fullName>MP_Region__c</fullName>
    <formula>TEXT( Marketing_Plan__r.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MP Region</label>
    <type>Text</type>
</CustomField>