force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Associated Programs</relationshipLabel>
    <relationshipName>Associated_Programs_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>