force-app/main/default/objects/Associated_Programs_Vendors__c/fields/POP_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>POP_Owner_Email__c</fullName>
    <label>POP Owner Email</label>
    <type>Email</type>
</CustomField>