force-app/main/default/objects/Associated_Programs_Vendors__c/fields/POP_Status__c.field-meta.xml
<CustomField>
    <fullName>POP_Status__c</fullName>
    <label>POP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Not Executed</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>