force-app/main/default/objects/Associated_Programs_Vendors__c/fields/POP_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>POP_Status_Reason__c</fullName>
    <label>POP Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>POP_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No POP Applies</fullName>
            </value>
            <value>
                <fullName>Vendor Dissatisfied with Program</fullName>
            </value>
            <value>
                <fullName>Cancelled by PM / Segment</fullName>
            </value>
            <value>
                <fullName>Cancelled by Vendor</fullName>
            </value>
            <value>
                <fullName>Vendor Absent – Charge</fullName>
            </value>
            <value>
                <fullName>Program Full</fullName>
            </value>
            <value>
                <fullName>Program Replaced</fullName>
            </value>
            <value>
                <fullName>Vendor Missed Deadline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>