force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <formula>TEXT (MDF_Program__r.Pricing_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Type</label>
    <type>Text</type>
</CustomField>