force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Product_Manager_1email_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_1email_Id__c</fullName>
    <label>Product Manager 1email-Id</label>
    <type>Email</type>
</CustomField>