force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Product_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Approval__c</fullName>
    <label>Product Manager Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved by Product Manager</fullName>
            </value>
            <value>
                <fullName>Declined by Product Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>