force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Product_Manager_Email11__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Email11__c</fullName>
    <label>Product Manager Email #11</label>
    <type>Email</type>
</CustomField>