force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Product_Manager_Email13__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Email13__c</fullName>
    <label>Product Manager Email #13</label>
    <type>Email</type>
</CustomField>