force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Program_Notes__c.field-meta.xml
<CustomField>
    <fullName>Program_Notes__c</fullName>
    <label>Program Notes</label>
    <type>TextArea</type>
</CustomField>