force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Rate_Card_Price__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Price__c</fullName>
    <label>Rate Card Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>