force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <formula>TEXT( MDF_Program__r.Sub_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Region</label>
    <type>Text</type>
</CustomField>