force-app/main/default/objects/Associated_Programs_Vendors__c/fields/Total_Earned_MDF__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned_MDF__c</fullName>
    <formula>Budgeted_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Earned MDF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>