force-app/main/default/objects/Associated_Programs_Vendors__c/recordTypes/Vendor_Association.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Association</fullName>
    <active>true</active>
    <label>Vendor Association</label>
</RecordType>