force-app/main/default/objects/Associated_Programs_Vendors__c/recordTypes/Vendor_Association_Locked.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Association_Locked</fullName>
    <active>true</active>
    <label>Vendor Association Locked</label>
</RecordType>