force-app/main/default/objects/Associated_Programs_Vendors__c/recordTypes/Vendor_Association_MP.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Association_MP</fullName>
    <active>true</active>
    <label>Vendor Association MP</label>
</RecordType>