force-app/main/default/objects/Associated_Programs_Vendors__c/validationRules/Viper_Budgeted_Price_and_Variable_price.validationRule-meta.xml
<ValidationRule>
    <fullName>Viper_Budgeted_Price_and_Variable_price</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Budgeted_Price__c )  &amp;&amp;  CONTAINS ( $Profile.Name,&apos;MDF Program Owners&apos;) &amp;&amp; NOT(ISPICKVAL(MDF_Program__r.Pricing_Type__c , &apos;Variable&apos;) &amp;&amp;ISBLANK(Marketing_Plan__c) )</errorConditionFormula>
    <errorMessage>&apos;The budgeted price can be edited only for the Variable APVs which are not associated to a Marketing Plan.&apos;</errorMessage>
</ValidationRule>