force-app/main/default/objects/Associated_Programs_Vendors__c/validationRules/Viper_Budgeted_Price_Product_Managers.validationRule-meta.xml
<ValidationRule>
    <fullName>Viper_Budgeted_Price_Product_Managers</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	$Profile.Name = &apos;MDF Product Managers&apos;,
	ISCHANGED(Budgeted_Price__c),
	NOT(
		OR(
			MDF_Program__r.RecordType.Name = &apos;Sales Tools&apos;,
			MDF_Program__r.RecordType.Name = &apos;Contest&apos;,
			MDF_Program__r.RecordType.Name = &apos;Other&apos;
		)
	)
	
)</errorConditionFormula>
    <errorDisplayField>Budgeted_Price__c</errorDisplayField>
    <errorMessage>You are not authorized to edit this field. Please contact your administrator.</errorMessage>
</ValidationRule>