force-app/main/default/objects/Associated_Programs_Vendors__c/validationRules/Viper_Prevent_Budgeted_Dist_Field_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Viper_Prevent_Budgeted_Dist_Field_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
OR(
MP_Contract_Type__c = &apos;Ala Carte&apos;,
MP_Contract_Type__c = &apos;Headcount&apos;
),
NOT(ISCHANGED(Budgeted_Price__c))
,
OR(
AND(NOT(ISNULL(PRIORVALUE(LE__c))),ISCHANGED(LE__c )),
AND(NOT(ISNULL(PRIORVALUE(PUB__c))),ISCHANGED(PUB__c)),
AND(NOT(ISNULL(PRIORVALUE(SMB__c))),ISCHANGED(SMB__c)),
AND(NOT(ISNULL(PRIORVALUE(CSMR__c))),ISCHANGED(CSMR__c))
)
)</errorConditionFormula>
    <errorMessage>The Segment Budgeted Distribution Pricing fields cannot be edited for Ala Carte or Headcount contract type.</errorMessage>
</ValidationRule>