force-app/main/default/objects/Associated_Programs_Vendors__c/validationRules/VR_Distributed_Budgeted_Price_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Distributed_Budgeted_Price_Match</fullName>
    <active>true</active>
    <description>System will need to show an error message if sum of Distributed Budgeted Price and Budgeted Price is different.</description>
    <errorConditionFormula>Budgeted_Price__c &lt;&gt; ( LE__c + SMB__c + PUB__c + CSMR__c )</errorConditionFormula>
    <errorMessage>The sum of the Distributed Budgeted Prices (LE + CSMR + PUB + SMB) must equal the Budgeted Price of the APV record. Record not saved.</errorMessage>
</ValidationRule>